- css > 고급 > transition 작업 중

--- a/assets/02-css/04-cssAdvanced/01-css_transform_part1.html
+++ b/assets/02-css/04-cssAdvanced/01-css_transform_part1.html
@@ -20,7 +20,7 @@
 		</p>
 	</blockquote>
 	<div class="ol_lst indent_max mt_l">
-		<p class="ml_mn font16 t_black weight-500">transform 속성은 HTML 요소에 대해 다음과 같은 동작을 제공합니다.</p>
+		<p class="ml_mn font-16 t_black weight-500">transform 속성은 HTML 요소에 대해 다음과 같은 동작을 제공합니다.</p>
 		<ol class="mt_s">
 			<li class="line_code font14">
 				<strong class="mb_sm">해당 요소의 크기를 변경합니다.</strong>
@@ -65,7 +65,7 @@
 			</p>
 		</blockquote>
 		<div class="indent mt_l">
-			<p class="ml_mn font16 t_black">CSS3 2D transform 속성은 다음과 같습니다.</p>
+			<p class="ml_mn font-16 t_black">CSS3 2D transform 속성은 다음과 같습니다.</p>
 			<div class="ol_lst mt_ms">
 				<ol>
 					<li><code>transform</code> : 요소에 2D 변형(transform)을 적용함.</li>
@@ -74,7 +74,7 @@
 			</div>
 		</div>
 		<div class="indent mt_l">
-			<p class="ml_mn font16 t_black">
+			<p class="ml_mn font-16 t_black">
 				2D transform은 프로퍼티값으로 변환함수(transform function)를 사용합니다.<br>
 				변환함수는 다음과 같습니다.
 			</p>
@@ -232,11 +232,11 @@
 								두 가지 방법을 사용한 애니메이션에 대해 다음과 같이 언급하고 있습니다.
 							</p>
 							<p class="mt_ms">
-								<b class="font16">‘</b>
+								<b class="font-16">‘</b>
 								top/left는 각 프레임을 그려내는 데 너무 많은 시간을 소요한다. 그 결과 약간 뚝뚝 끊어지는 듯이 전이가 이루어진다.<br>
 								반면에 translate는 요소가 GPU(RenderLayer라고 불림)상에서 자기 자신의 레이어 위에 놓여지도록 만든다.<br>
 								GPU 상에서 그 자신의 레이어 위에 놓이기 때문에 2D 전환이 훨씬 더 빠르게 진행되고 프레임 속도도 빠르다.
-								<b class="font16">’</b>
+								<b class="font-16">’</b>
 							</p>
 						</blockquote>
 					</li>
@@ -352,6 +352,16 @@
 			<li class="firefox">16.0</li>
 			<li class="opera">23.0</li>
 			<li class="safari">9.0</li>
+		</ul>
+	</aside>
+	<aside class="browser_support mt_xxl" data-tit="Prefix transform">
+		<ul>
+			<li class="ie">9</li>
+			<li class="edge">12.0</li>
+			<li class="chrome">4.0 ~ 35.0</li>
+			<li class="firefox">3.5 ~ 15.0</li>
+			<li class="opera">11.5 ~ 22.0</li>
+			<li class="safari">3.1 ~ 8.0</li>
 		</ul>
 	</aside>
 
