--- a/assets/02-css/04-cssAdvanced/01-css_transform_part2.html
+++ b/assets/02-css/04-cssAdvanced/01-css_transform_part2.html
@@ -42,7 +42,7 @@
 			</p>
 		</blockquote>
 		<div class="indent mt_l">
-			<p class="ml_mn font16 t_black">CSS3 3D transform 속성은 다음과 같습니다.</p>
+			<p class="ml_mn font-16 t_black">CSS3 3D transform 속성은 다음과 같습니다.</p>
 			<div class="ol_lst mt_ms">
 				<ol>
 					<li><code>transform</code> : 요소에 2D 또는 3D 변형(transform)을 적용합니다.</li>
@@ -55,7 +55,7 @@
 			</div>
 		</div>
 		<div class="indent mt_l">
-			<p class="ml_mn font16 t_black">자식 요소를 3D 처리하기 위한 부모 요소에 설정하기 위한 속성</p>
+			<p class="ml_mn font-16 t_black">자식 요소를 3D 처리하기 위한 부모 요소에 설정하기 위한 속성</p>
 			<div class="ol_lst mt_ms">
 				<ol>
 					<li><code>perspective</code> : 원근, 소실점, 투시도법</li>
@@ -65,7 +65,7 @@
 			</div>
 		</div>
 		<div class="indent mt_l">
-			<p class="ml_mn font16 t_black">
+			<p class="ml_mn font-16 t_black">
 				CSS3 3D transform은 프로퍼티값으로 변환함수(transform function)를 사용합니다.
 				사용할 수 있는 변환함수는 다음과 같습니다.
 			</p>
@@ -90,7 +90,7 @@
 		<!-- transform 속성 -->
 		<article class="indent mt_xxl">
 			<h3 class="ml_mn"><i class="t_blue">transform</i> 속성</h3>
-			<p class="t_color mt_ms font16">
+			<p class="t_666 mt_ms font-16">
 				CSS3 2D transform에서 설명한 부분은 제외합니다.<br>
 				<span class="el_block mt_sm"><code>transform : none | &lt;transform-function&gt; [ &lt;transform-function&gt; ]*</code></span>
 			</p>
@@ -239,7 +239,7 @@
 		<!-- transform-origin 속성 -->
 		<article class="indent mt_xxl">
 			<h3 class="ml_mn"><i class="t_blue">transform-origin</i> 속성</h3>
-			<p class="t_color mt_ms">
+			<p class="t_666 mt_ms">
 				<code>transform-origin</code>은 <code>CSS transform</code> 속성과 함께 사용되는 속성으로서, 회전 중심(원점·기준점)을 지정합니다.<br>
 				요소에 변형(transform)을 적용하는 변환 중심을 설정합니다.<br>
 				<code>rotate()</code>, <code>skew()</code> 등의 회전, 변형 속성을 사용하기 전에 기준점을 지정합니다. 초기 값은 50% 50%으로 요소의 중심점이 됩니다.<br>
@@ -249,7 +249,7 @@
 				<code>transform-origin : [ &lt;percentage&gt; | &lt;length&gt; | left | center | right | top | bottom] | [ [ &lt;percentage&gt; | &lt;length&gt; | left | center | right ] &amp;&amp; [ &lt;percentage&gt; | &lt;length&gt; | top | center | bottom ] ] &lt;length&gt;</code>
 			</p>
 			<div class="ol_lst indent_max mt_ms">
-				<p class="ml_mn t_black weight-500 font16">백분율(%) 과 대응 가능한 키워드로는 다음과 같습니다.</p>
+				<p class="ml_mn t_black weight-500 font-16">백분율(%) 과 대응 가능한 키워드로는 다음과 같습니다.</p>
 				<ol class="mt_s">
 					<li><code>0% = left</code></li>
 					<li><code>0% = top</code></li>
@@ -264,7 +264,7 @@
 				100% 100%는 오른쪽 하단 모서리에 설정합니다. 20% 80%는 박스의 오른쪽에 20%, 아래로 80%로 설정됩니다.
 			</p>
 			<div class="ol_lst indent_max mt_ms">
-				<p class="ml_mn t_black weight-500 font16">백분율(%) 과 대응 가능한 키워드로 다음과 같이 사용할 수 있습니다.</p>
+				<p class="ml_mn t_black weight-500 font-16">백분율(%) 과 대응 가능한 키워드로 다음과 같이 사용할 수 있습니다.</p>
 				<ol class="mt_s">
 					<li><code>0% 0% = [top left] / [left top]</code></li>
 					<li><code>0% 50% = [left] / [left center] / [center left]</code></li>
@@ -287,7 +287,7 @@
 		<!-- transform-style 속성 -->
 		<article class="indent mt_xxl">
 			<h3 class="ml_mn"><i class="t_blue">transform-style</i> 속성</h3>
-			<p class="t_color mt_ms">요소에 변형을 적용할 때 그 변환이 자식(child) 요소들에게도 적용될지 안 될지를 설정합니다.</p>
+			<p class="t_666 mt_ms">요소에 변형을 적용할 때 그 변환이 자식(child) 요소들에게도 적용될지 안 될지를 설정합니다.</p>
 			<p class="mt_ms"><code>transform-style : flat | preserve-3d;</code></p>
 			<div class="ol_lst indent mt_ms">
 				<ol>
@@ -315,7 +315,7 @@
 		<!-- perspective  속성 -->
 		<article class="indent mt_xxl">
 			<h3 class="ml_mn"><i class="t_blue">perspective</i> 속성</h3>
-			<p class="t_color mt_ms">
+			<p class="t_666 mt_ms">
 				<code>perspective : none | &lt;length&gt;</code><br>
 				<code>transform: perspective(100px);</code>
 			</p>
@@ -339,7 +339,7 @@
 		<!-- perspective-origin 속성 -->
 		<article class="indent mt_xxl">
 			<h3 class="ml_mn"><i class="t_blue">perspective-origin</i> 속성</h3>
-			<p class="t_color mt_ms">3D 요소에 원근감을 표현할 때 사용할 기준 축을 설정합니다.</p>
+			<p class="t_666 mt_ms">3D 요소에 원근감을 표현할 때 사용할 기준 축을 설정합니다.</p>
 			<p class="mt_ms">
 				<code>
 					perspective-origin : [ &lt;percentage&gt; | &lt;length&gt; | left | center | right | top | bottom] | [ [ &lt;percentage&gt; | &lt;length&gt; | left | center | right ] &amp;&amp; [ &lt;percentage&gt; | &lt;length&gt; | top | center | bottom ] ];
@@ -356,7 +356,7 @@
 		<!-- backface-visibility(이면가시성) 속성 -->
 		<article class="indent mt_xxl">
 			<h3 class="ml_mn"><i class="t_blue">backface-visibility(이면가시성)</i> 속성</h3>
-			<p class="t_color mt_ms">
+			<p class="t_666 mt_ms">
 				요소의 앞면만을 표현하고, 뒷면을 표현할지 안 할지를 설정합니다.<br>
 				<code>backface-visibility</code> 속성은 3D 변형과 연관되어 있으며 입체적인 뒷면의 가시성(뒤집어진 면)을 결정하는 속성입니다.<br>
 				즉, 변형이 가해져서 요소가 뒤집어 졌을 때, 이 속성으로 숨기거나 보여지게 할 수 있습니다.
@@ -409,6 +409,16 @@
 			<li class="firefox">16.0</li>
 			<li class="opera">23.0</li>
 			<li class="safari">9.0</li>
+		</ul>
+	</aside>
+	<aside class="browser_support mt_xxl" data-tit="Prefix transform">
+		<ul>
+			<li class="ie">9</li>
+			<li class="edge">12.0</li>
+			<li class="chrome">4.0 ~ 35.0</li>
+			<li class="firefox">3.5 ~ 15.0</li>
+			<li class="opera">11.5 ~ 22.0</li>
+			<li class="safari">3.1 ~ 8.0</li>
 		</ul>
 	</aside>
 
