--- a/assets/guide.html
+++ b/assets/guide.html
@@ -162,6 +162,20 @@
 			<img src="/assets/lib/img/html/img_html_tag_structure.png" alt="html 요소 설명">
 			<figcaption>[HTML 요소의 부분 설명]</figcaption>
 		</figure>
+
+
+		<div class="line_code_box both mt_ms">
+			<code>
+				<span class="t_777">.box {</span>
+				<span class="el_block indent">
+						transition-property: transform, color, border;<br>
+						transition-duration: .5s;<br>
+						transition-timing-function: ease;<br>
+						transition-delay: .2s;
+					</span>
+				<span class="t_777">}</span>
+			</code>
+		</div>
 	</div>
 </div><!-- //wrap -->
 
