--- a/assets/02-css/03-cssMiddleclass/05-css_ir.html
+++ b/assets/02-css/03-cssMiddleclass/05-css_ir.html
@@ -25,12 +25,12 @@
 
 	<figure class="img_figure mt_l">
 		<img src="/ukncs/images/css/img_sprite.gif" alt="이미지 스프라이트 사용 방법">
-		<figcaption class="t_color">[이미지 스프라이트 사용 방법]</figcaption>
+		<figcaption class="t_666">[이미지 스프라이트 사용 방법]</figcaption>
 	</figure>
 
 	<figure class="img_figure mt_l">
 		<img src="/ukncs/images/css/img_sprite.png" alt="이미지 스프라이트 사용 예시">
-		<figcaption class="t_color">[이미지 스프라이트 사용 예시]</figcaption>
+		<figcaption class="t_666">[이미지 스프라이트 사용 예시]</figcaption>
 		<p class="t_blue">w:48px h:48px / margin:10px / 총사이즈 : w:106px h:154px</p>
 	</figure>
 
