- css > 고급 > transition 완료 및 code_box 추가

--- a/assets/01-html/01-htmlStart/02-html_basic.html
+++ b/assets/01-html/01-htmlStart/02-html_basic.html
@@ -49,25 +49,35 @@
 			<ol>
 				<li class="line_code mt_m">
 					<h3>HTML5 doctype</h3>
-					<p>&lt;!DOCTYPE html&gt;</p>
+					<div class="line_code_box mt_s">
+						<code>&lt;!DOCTYPE html&gt;</code>
+					</div>
 				</li>
 				<li class="line_code mt_m">
 					<h3>HTML 4.01 strict doctype</h3>
-					<p>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.01//EN&quot; &quot;http://www.w3.org/TR/html4/strict.dtd&quot;&gt;</p>
+					<div class="line_code_box mt_s">
+						<code>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.01//EN&quot; &quot;http://www.w3.org/TR/html4/strict.dtd&quot;&gt;</code>
+					</div>
 				</li>
 				<li class="line_code mt_m">
 					<h3>HTML 4.01 transitional doctype</h3>
-					<p>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.01 Transitional//EN&quot; &quot;http://www.w3.org/TR/html4/loose.dtd&quot;&gt;</p>
+					<div class="line_code_box mt_s">
+						<code>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.01 Transitional//EN&quot; &quot;http://www.w3.org/TR/html4/loose.dtd&quot;&gt;</code>
+					</div>
 				</li>
 				<li class="line_code mt_m">
 					<h3>XML 1.0 strict and transitional doctypes</h3>
-					<p>&lt;!DOCTYPE html PUBLIC &quot;-//W3C//DTD XHTML 1.0 Strict//EN&quot; &quot;http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd&quot;&gt;</p>
-					<p>&lt;!DOCTYPE html PUBLIC &quot;-//W3C//DTD XHTML 1.0 Transitional//EN&quot; &quot;http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd&quot;&gt;</p>
+					<div class="line_code_box mt_s">
+						<code>&lt;!DOCTYPE html PUBLIC &quot;-//W3C//DTD XHTML 1.0 Strict//EN&quot; &quot;http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd&quot;&gt;</code><br>
+						<code>&lt;!DOCTYPE html PUBLIC &quot;-//W3C//DTD XHTML 1.0 Transitional//EN&quot; &quot;http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd&quot;&gt;</code>
+					</div>
 				</li>
 				<li class="line_code mt_m">
 					<h3>HTML 4.01 and XML 1.0 frameset doctypes</h3>
-					<p>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.01 Frameset//EN&quot; &quot;http://www.w3.org/TR/html4/frameset.dtd&quot;&gt;</p>
-					<p>&lt;!DOCTYPE html PUBLIC &quot;-//W3C//DTD XHTML 1.0 Frameset//EN&quot; &quot;http://www.w3.org/TR/xhtml1/DTD/xhtml1-frameset.dtd&quot;&gt;</p>
+					<div class="line_code_box mt_s">
+						<code>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.01 Frameset//EN&quot; &quot;http://www.w3.org/TR/html4/frameset.dtd&quot;&gt;</code><br>
+						<code>&lt;!DOCTYPE html PUBLIC &quot;-//W3C//DTD XHTML 1.0 Frameset//EN&quot; &quot;http://www.w3.org/TR/xhtml1/DTD/xhtml1-frameset.dtd&quot;&gt;</code>
+					</div>
 				</li>
 			</ol>
 		</div>
