--- a/assets/guide.html
+++ b/assets/guide.html
@@ -147,7 +147,8 @@
 		</section>
 		<!-- 코드 편집용 에디터 -->
 
-		<p class="reference mt_l">참조 : <a href="00000000000000" target="_blank" title="새창열림">Drag and Drop API</a></p>
+		<span class="reference mt_l"><a href="참조링크" target="_blank" title="새창열림">참조링크</a></span>
+		<!-- 참조 링크 -->
 
 		<article class="reference_box mt_l">
 			<h2 class="tit">참조</h2>
@@ -157,14 +158,15 @@
 				<li class="reference"><a href="00000000000000" target="_blank" class="fas" title="새창열림">W3C 전역속성</a></li>
 			</ul>
 		</article>
+		<!-- 참조 링크 박스 -->
 
 		<figure class="img_figure mt_l">
 			<img src="/assets/lib/img/html/img_html_tag_structure.png" alt="html 요소 설명">
 			<figcaption>[HTML 요소의 부분 설명]</figcaption>
 		</figure>
+		<!-- 이미지 박스 -->
 
-
-		<div class="line_code_box both mt_ms">
+		<div class="line_code_box mt_ms">
 			<code>
 				<span class="t_777">.box {</span>
 				<span class="el_block indent">
@@ -176,6 +178,26 @@
 				<span class="t_777">}</span>
 			</code>
 		</div>
+		<!-- 간단 코드 박스 -->
+
+		<div class="line_code_box line_code_number">
+			<ul>
+				<li>div {</li>
+				<li class="indent">transition-property: opacity, left;</li>
+				<li class="indent">transition-duration: 3s, 5s, 2s, 1s;</li>
+				<li class="indent">p {</li>
+				<li class="indent_max">000</li>
+				<li class="indent">}</li>
+				<li>}</li>
+				<li>/* 위를 아래와 같이 해석합니다. */</li>
+				<li>div {</li>
+				<li class="indent">transition-property: opacity, left;</li>
+				<li class="indent">transition-duration: 3s, 5s;</li>
+				<li>}</li>
+				<li>&lt;!--  --&gt;</li>
+			</ul>
+		</div>
+		<!-- 간단 코드 박스(라인 넘버) -->
 	</div>
 </div><!-- //wrap -->
 
