--- a/assets/kmtemp/transform/transition.html
+++ b/assets/kmtemp/transform/transition.html
@@ -109,7 +109,7 @@
 		<!-- 속성 설명 및 작성 방법 -->
 		<article class="transition_ex">
 			<h2><i>속성 설명 및 작성 방법</i></h2>
-			<p class="s_tit">Transition은 다른 css처럼(ex, border or background) <b>축약</b> 또는 <b>속성별로 나눠서</b> 작성 할 수 있다.</p>
+			<p class="s_tit">Transition은 다른 css처럼(ex, border or background) <b>축약</b> 또는 <b>속성별로 나눠서</b> 작성 할 수 있습니다.</p>
 
 			<div class="ex_lst transition_wrap">
 				<!-- Transition 속성 설명 -->
@@ -125,8 +125,8 @@
 							<li>
 								<p class="cell attr"><i>transition-property</i></p>
 								<p class="cell value">
-									transition 효과를 적용할 속성들을 나열, 2개 이상일 경우는 쉼표(,)로 구분한다.<br>
-									<b>css의 모든 속성에 적용(<span class="t_red2">all</span>)할 경우 생략 가능하다.</b>
+									transition 효과를 적용할 속성들을 나열, 2개 이상일 경우는 쉼표(,)로 구분합니다.<br>
+									<b>css의 모든 속성에 적용(<span class="t_red2">all</span>)할 경우 생략 가능합니다.</b>
 									<span class="value_color"><span>값 :</span> <b>all</b> 또는 <b>width</b>, <b>height</b>, <b>transform</b>등의 <b>css 속성</b></span>
 								</p>
 							</li>
@@ -136,7 +136,7 @@
 								<p class="cell attr"><i>transition-duration</i><br><span class="t_red2">(필수 선언)</span></p>
 								<p class="cell value">
 									transition 효과의 지속 시간 표기.<br>
-									1s는 1초이며, 0.1s는 숫자 0를 생략하고 .1s로 표기 가능하다.<br>
+									1s는 1초이며, 0.1s는 숫자 0를 생략하고 .1s로 표기 가능합니다.<br>
 									(ms의 단위로 할 경우 1초 = 1000ms)
 									<span class="value_color"><span>값 :</span> <b>#s or #ms</b></span>
 								</p>
@@ -147,8 +147,8 @@
 								<p class="cell attr"><i>transition-timing-function</i></p>
 								<div class="cell value">
 									변화의 시작과 끝 타이밍을 정의하며,
-									조금 더 정교한 또는 현실적인 움직임을 표현하기 위해 사용된다.<br>
-									<b>기본값은 ease이며 기본값으로 사용할 경우 생략 가능하다.</b>
+									조금 더 정교한 또는 현실적인 움직임을 표현하기 위해 사용됩니다.<br>
+									<b>기본값은 ease이며 기본값으로 사용할 경우 생략 가능합니다.</b>
 
 									<span class="value_color"><span>값 :</span> <b>ease</b>, <b>linear</b>, <b>ease-in</b>, <b>ease-out</b>, <b>ease-in-out</b>, <b>step(n)</b>, <b>cubic-bezier(n,n,n,n)</b></span>
 
@@ -160,23 +160,23 @@
 											<button type="button" class="stop disabled"><i>Stop</i></button>
 										</div>
 										<ul class="c_sub">
-											<li class="play1"><span><i>ease</i> : 느리게 시작하여 점점 빨라졌다가 느리게 끝난다.</span></li>
+											<li class="play1"><span><i>ease</i> : 느리게 시작하여 점점 빨라졌다가 느리게 끝납니다.</span></li>
 											<li class="play2"><span><i>linear</i> : 모든 속도가 같은 등속 운동</span></li>
 											<li class="play3"><span><i>ease-in</i> : 느리게 시작한 후 일정한 속도에 다다르면 그 상태로 등속 운동</span></li>
-											<li class="play4"><span><i>ease-out</i> : 일정한 속도의 등속으로 시작해서 점점 느려지면서 끝난다.</span></li>
-											<li class="play5"><span><i>ease-in-out</i> : ease와 비슷하다. 느리게 시작하여 느리게 끝난다.</span></li>
+											<li class="play4"><span><i>ease-out</i> : 일정한 속도의 등속으로 시작해서 점점 느려지면서 끝납니다.</span></li>
+											<li class="play5"><span><i>ease-in-out</i> : ease와 비슷하다. 느리게 시작하여 느리게 끝납니다.</span></li>
 											<li class="not_play">
-												<i>steps(n)</i> : 애니메이션의 흐름을 Step(단계)화해서 제어할 수 있다.<br>
-												<p class="ani">아래 <b class="t_red2 underline">5. Steps 선언</b>에서 자세히 다룬다.</p>
-												<p class="tra">아래 <b class="t_red2 underline">5. Steps 선언</b>에서 자세히 다룬다.</p>
+												<i>steps(n)</i> : 애니메이션의 흐름을 Step(단계)화해서 제어할 수 있습니다.<br>
+												<p class="ani">아래 <b class="t_red2 underline">5. Steps 선언</b>에서 자세히 다룹니다.</p>
+												<p class="tra">아래 <b class="t_red2 underline">5. Steps 선언</b>에서 자세히 다룹니다.</p>
 											</li>
 											<li class="not_play">
-												<i>cubic-bezier(n,n,n,n)</i> : 처음과 끝의 속도를 0과 1 사이의 수치를 이용하여 4단계로 지정할 수 있다. 베지어(Bezier)라는 곡선 운동을 정의한다.<br>
+												<i>cubic-bezier(n,n,n,n)</i> : 처음과 끝의 속도를 0과 1 사이의 수치를 이용하여 4단계로 지정할 수 있다. 베지어(Bezier)라는 곡선 운동을 정의합니다.<br>
 												<div class="tab1">
 													<a href="https://easings.net/" target="_blank">https://easings.net/</a><br>
-													위 사이트에서 미리 만들어져있는 cubic-bezier 값을 가져다 쓰면 좋다.<br>
+													위 사이트에서 미리 만들어져있는 cubic-bezier 값을 가져다 쓰면 좋습니다.<br>
 													<a href="https://cubic-bezier.com/" target="_blank">https://cubic-bezier.com/</a><br>
-													위 사이트에서는 cubic-bezier의 움직임을 직접 만들 수 있다.
+													위 사이트에서는 cubic-bezier의 움직임을 직접 만들 수 있습니다.
 												</div>
 											</li>
 										</ul>
@@ -202,7 +202,7 @@
 				<div class="writing_method">
 					<p class="tit">
 						<i class="fas fa-info-circle"></i> 작성 방법
-						<span class="tit_ex"><b>최대 단축형</b>과 <b>확장 단축형</b>이 주로 쓰인다.</span>
+						<span class="tit_ex"><b>최대 단축형</b>과 <b>확장 단축형</b>이 주로 쓰입니다.</span>
 					</p>
 
 					<!-- 최대 단축형 -->
@@ -246,11 +246,10 @@
 							<span class="lst_s">}</span>
 						</div>
 						<ul class="c_sub">
-							<!--<li>많은 설계가 필요하지 않은, 간단한 동작을 구현하는데 많이 쓰인다.</li>-->
-							<li>변경할 속성이 한 개 또는 모든 css속성일 경우에만 사용된다. (주로 property가 all일 경우에 많이 쓰인다.)</li>
+							<li>변경할 속성이 한 개 또는 모든 css속성일 경우에만 사용됩니다. (주로 property가 all일 경우에 많이 쓰입니다.)</li>
 							<li>
 								모든 css속성(property)에 적용하고, 기본 타이밍(ease)을 사용하고, 지연시간(delay)이 없을 경우<br>
-								[ <b>transition:.5s;</b> ] 이렇게 지속시간(duration)만 선언하여 사용 가능하다.
+								[ <b>transition:.5s;</b> ] 이렇게 지속시간(duration)만 선언하여 사용 가능합니다.
 							</li>
 						</ul>
 					</div>
@@ -266,7 +265,7 @@
 							}
 						</div>
 						<p class="c_sub">
-							변경할 속성이 <b>두 개 이상일 때 사용</b>되며, 각 속성별로 <b>독립적인 움직임</b>을 줄 수 있다.
+							변경할 속성이 <b>두 개 이상일 때 사용</b>되며, 각 속성별로 <b>독립적인 움직임</b>을 줄 수 있습니다.
 						</p>
 					</div>
 
@@ -282,8 +281,8 @@
 							}
 						</div>
 						<ul class="c_sub">
-							<li>transition의 속성을 분리해서 정의할 수 있다.</li>
-							<li>code가 길어지는 단점이 있지만, 전체 속성(all) 대신 꼭 필요한 속성만 사용할 수 있다.</li>
+							<li>transition의 속성을 분리해서 정의할 수 있습니다.</li>
+							<li>code가 길어지는 단점이 있지만, 전체 속성(all) 대신 꼭 필요한 속성만 사용할 수 있습니다.</li>
 						</ul>
 					</div>
 
@@ -299,8 +298,8 @@
 							}
 						</div>
 						<div class="c_sub">
-							transition-property에 나열된 순서대로 다른 transitiondml 속성이 대입 적용된다.<br>
-							(3개 이상부터는 관리가 어려운 개인적인 판단에 이 방법은 쓰지 않는다.)
+							transition-property에 나열된 순서대로 다른 transitiondml 속성이 대입 적용됩니다.<br>
+							(3개 이상부터는 관리가 어려운 개인적인 판단에 이 방법은 추천하지 않습니다.)
 						</div>
 					</div>
 
@@ -309,9 +308,9 @@
 						<p class="c_tit">5. Steps 선언</p>
 						<!--<p class="c_sub">아래는 <span class="t_red2">mouse hover 중이라는 가정</span>하에 steps(n)의 미적용/적용 예제이다.</p>-->
 						<p class="c_sub">
-							애니메이션의 흐름을 Step(단계)화해서 제어할 수 있다.<br>
-							duration 값과 연계해서 선언하여 일종의 <b>Frame Rate(초당 프레임 수)를 설정</b>하거나 혹은, <b>셀 애니메이션처럼 연계된 동작</b>을 표현할 수도 있다.<br>
-							아래 예제 박스에 마우스를 올리거나 Result버튼을 클릭하면 확인할 수 있다.
+							애니메이션의 흐름을 Step(단계)화해서 제어할 수 있습니다.<br>
+							duration 값과 연계해서 선언하여 일종의 <b>Frame Rate(초당 프레임 수)를 설정</b>하거나 혹은, <b>셀 애니메이션처럼 연계된 동작</b>을 표현할 수도 있습니다.<br>
+							아래 예제 박스에 마우스를 올리거나 Result버튼을 클릭하면 확인할 수 있습니다.
 						</p>
 						<div class="tra_ex_wrap clear">
 							<!-- 미적용 -->
@@ -353,74 +352,6 @@
 					</div>
 				</div>
 
-				<!-- Timing
-				<div class="writing_method  table_wrap">
-					<p class="tit">
-						<i class="fas fa-info-circle"></i> timing-function
-						<span class="tit_ex2">
-							transition과 animation양쪽에서 매우 중요한 비중을 차지한다.<br>
-							필요 없을 경우에 생략해도 무방하지만, 조금 더 정교한 또는 현실적인 움직임을 표현하기 위해선 반드시 정확히 이해하고 사용해야 한다.
-						</span>
-					</p>
-
-					<div class="table">
-						<ul class="lst_hd">
-							<li class="cell attr">속성</li>
-							<li class="cell value">값</li>
-						</ul>
-						<ul class="lst_bd">
-							<li>
-								<p class="cell attr"><i>ease</i></p>
-								<p class="cell value">
-									기본값이며 이 값을 사용 할 경우 생략 가능하다.
-									느리게 시작하여 점점 빨라졌다가 느리게 끝난다.
-									일반적으로 이 속성을 사용하면 대부분의 움직임이 자연스러움을 갖는다.
-								</p>
-							</li>
-							<li>
-								<p class="cell attr"><i>linear</i></p>
-								<p class="cell value">
-									모든 속도가 같은 등속 운동
-								</p>
-							</li>
-							<li>
-								<p class="cell attr"><i>ease-in</i></p>
-								<p class="cell value">
-									느리게 시작한 후 일정한 속도에 다다르면 그 상태로 등속 운동
-								</p>
-							</li>
-							<li>
-								<p class="cell attr"><i>ease-out</i></p>
-								<p class="cell value">
-									일정한 속도의 등속으로 시작해서 점점 느려지면서 끝난다.
-								</p>
-							</li>
-							<li>
-								<p class="cell attr"><i>ease-in-out</i></p>
-								<p class="cell value">
-									ease와 비슷하다. 느리게 시작하여 느리게 끝난다.
-								</p>
-							</li>
-							<li>
-								<p class="cell attr"><i>cubic-bezier(n,n,n,n)</i></p>
-								<p class="cell value">
-									처음과 끝의 속도를 0과 1 사이의 수치를 이용하여 4단계로 지정할 수 있다. 베지어(Bezier)라는 곡선 운동을 정의한다.<br>
-									등속 운동에 대한 값을 직접 계산하기 힘들다.<br><br>
-									<a href="https://easings.net/" target="_blank">https://easings.net/</a><br>
-									위 사이트에서 미리 만들어져있는 값을 가져다 쓰면 좋고,
-									위 사이트의 모든 easings 움직임 중 cubic-bezier로 구현 가능한 것과 @keyframes으로만 구현이 가능한 것이 있다.<br><br>
-
-									추가로 <a href="https://cubic-bezier.com/" target="_blank">https://cubic-bezier.com/</a> 이 사이트에서는
-									cubic-bezier의 움직임을 직접 만들 수 있다.<br><br>
-
-									※ <b>@keyframes</b>은 animation의 움직임을 정의하는 함수로
-									<a href="animation.php" target="_blank">km_temp animation</a>에서 확인할 수 있다.
-								</p>
-							</li>
-						</ul>
-					</div>
-				</div>
-				-->
 			</div>
 		</article>
 
