- css > 고급 > transition 완료 및 code_box 추가

--- a/assets/02-css/04-cssAdvanced/02-css_transition.html
+++ b/assets/02-css/04-cssAdvanced/02-css_transition.html
@@ -60,8 +60,10 @@
 			transition 효과의 지속 시간 표기합니다.<br>
 			밀리초(millisecond, ms) 또는 초(second, s)로 지속시간을 설정할 수 있습니다.<br>
 			1s는 1초이며, 0.1s는 숫자 0를 생략하고 .1s로 표기 가능합니다. (ms의 단위로 할 경우 1초 = 1000ms)<br>
-			<code>transition-duration : 1s | 1000ms</code>
 		</p>
+		<div class="line_code_box line_code_number mt_ms">
+			<code>transition-duration : 1s | 1000ms;</code>
+		</div>
 	</section>
 
 	<!-- transition-timing-function 속성 -->
