- css > 고급 > animation 완료

--- a/assets/02-css/04-cssAdvanced/03-css_animation.html
+++ b/assets/02-css/04-cssAdvanced/03-css_animation.html
@@ -373,3 +373,33 @@
 			</div>
 		</div>
 	</section>
+
+	<aside class="browser_support mt_xxl" data-tit="animation">
+		<ul>
+			<li class="ie">10+</li>
+			<li class="edge">12.0</li>
+			<li class="chrome">43.0</li>
+			<li class="firefox">16.0</li>
+			<li class="opera">30.1</li>
+			<li class="safari">9.0</li>
+		</ul>
+	</aside>
+	<aside class="browser_support mt_xxl" data-tit="Prefix animation">
+		<ul>
+			<li class="ie">10+</li>
+			<li class="edge">12.0</li>
+			<li class="chrome">4.0 -webkit-</li>
+			<li class="firefox">5.0 -moz-</li>
+			<li class="opera">12.5 -o-</li>
+			<li class="safari">4.0 -webkit-</li>
+		</ul>
+	</aside>
+
+	<aside class="reference_box mt_xxl">
+		<h2 class="tit">Animation 참조</h2>
+		<ul class="link_lst">
+			<li class="reference"><a href="https://www.w3.org/TR/css-animations-1/" target="_blank" class="fas" title="새창열림">W3C CSS Animations Level 1 W3C Working Draft, 11 October 2018</a></li>
+			<li class="reference"><a href="https://drafts.csswg.org/css-animations/#animation" target="_blank" class="fas" title="새창열림">W3C CSS Animations Level 1 Editor’s Draft, 30 September 2019</a></li>
+			<li class="reference"><a href="https://developer.mozilla.org/ko/docs/Web/CSS/animation" target="_blank" class="fas" title="새창열림">MDN CSS animation</a></li>
+		</ul>
+	</aside>
