- css > 고급 > animation 내용 추가

--- a/assets/02-css/04-cssAdvanced/03-css_animation.html
+++ b/assets/02-css/04-cssAdvanced/03-css_animation.html
@@ -374,6 +374,21 @@
 		</div>
 	</section>
 
+
+	<!-- 테스트 및 요약설명 -->
+	<section class="indent mt_xxl ">
+		<h2 class="ml_mn"><i class="t_blue">animation</i> 테스트 및 <i class="t_blue">요약설명</i></h2>
+		<p class="mt_m">
+			위에 설명된 <i class="t_blue">animation의 속성</i>을 직접 테스트 할 수 있습니다.<br>
+			각 속성의 input값을 변경하여 마우스오버(hover) 또는 result버튼을 클릭하세요.<br>
+			<span class="reference mt_l">테스트기 출처 : <a href="http://921430km.com/_temp/transform/animation.php" target="_blank" title="새창열림">http://921430km.com/animation</a></span>
+		</p>
+
+		<div class="iframe_con mt_ml">
+			<iframe class="box_model_iframe" src="/assets/kmtemp/transform/animation.html" width="100%" height="100%" scrolling="no"></iframe>
+		</div>
+	</section>
+
 	<aside class="browser_support mt_xxl" data-tit="animation">
 		<ul>
 			<li class="ie">10+</li>
