- css > 고급 > flex 작업 중

--- a/assets/02-css/04-cssAdvanced/04-css_flexible_part1.html
+++ b/assets/02-css/04-cssAdvanced/04-css_flexible_part1.html
@@ -183,7 +183,7 @@
 	</section>
 
 	<aside class="reference_box mt_xxl">
-		<h2 class="tit">플렉서블 레이아웃 참조</h2>
+		<h2 class="tit">플렉서블 박스 레이아웃 참조</h2>
 		<ul class="link_lst">
 			<li class="reference"><a href="https://www.w3.org/TR/css-flexbox-1/" target="_blank" class="fas" title="새창열림">W3C CSS Flexible Box Layout Module Level 1</a></li>
 			<li class="reference"><a href="https://drafts.csswg.org/css-align/" target="_blank" class="fas" title="새창열림">W3C CSS Box Alignment Module Level 3</a></li>
