- css > 고급 > flex 작업 중

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 	<link href="/assets/lib/js/codemirror/lib/codemirror.css" rel="stylesheet" /><!-- 코드미러 기본 -->
 	<!--<link href="/assets/lib/css/swiper.css" rel="stylesheet" />-->
 	<link href="/assets/lib/css/uk.css" rel="stylesheet" />
+	<link href="/assets/lib/css/uk_sub.css" rel="stylesheet" />
 
 	<!-- js -->
 	<script type="text/javascript" src="/assets/lib/js/plugin/jquery-1.9.1.min.js"></script>
