--- a/ukncs/tutorials/css/step03/4.4.flexible/4.4.1.flexible-flex-direction.html
+++ b/ukncs/tutorials/css/step03/4.4.flexible/4.4.1.flexible-flex-direction.html
@@ -42,7 +42,7 @@
 			.column { 
 				-webkit-flex-direction: column; 
 				flex-direction: column; 
-				float: left;
+				/*float: left;*/
 			}
 			.column li {
 				background: deepskyblue;
@@ -51,7 +51,7 @@
 			.column-reverse { 
 				-webkit-flex-direction: column-reverse; 
 				flex-direction: column-reverse; 
-				float: right;
+				/*float: right;*/
 			}
 			.column-reverse li {
 				background: lightgreen;
